Fix dependencies error

--- a/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
+++ b/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
@@ -9,22 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import fiona\n",
-    "import pyogrio\n",
-    "import os\n",
-    "\n",
-    "import requests\n",
-    "import zipfile\n",
-    "import os\n",
-    "from io import BytesIO\n",
-    "from bs4 import BeautifulSoup"
+    "import os"
    ]
   },
   {
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +49,9 @@
     "    columns = gdf.columns\n",
     "    gdf = gdf[[columns[0], columns[1], columns[2], columns[3], columns[-1]]]\n",
     "    \n",
-    "    return gdf.loc[gdf[columns[1]].notna()]"
+    "    # change to panda dataframe\n",
+    "    pd_gdf = pd.DataFrame(gdf)\n",
+    "    return pd_gdf.loc[pd_gdf[columns[1]].notna()]"
    ]
   },
   {
@@ -69,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +203,8 @@
     "    # Update with the actual path\n",
     "    GPKG_PATH = os.path.join(event_dir, \"eqmodel_outputs.gpkg\")\n",
     "\n",
+    "    # change gdf to geodataframe\n",
+    "    gdf = gpd.GeoDataFrame(gdf, geometry=gdf['geometry'])\n",
     "\n",
     "    gdf.to_file(GPKG_PATH, layer=layer_name, driver=\"GPKG\", mode=\"w\")\n",
     "    print(f\"Saved {layer_name} to {GPKG_PATH} (overwritten).\")"
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +220,7 @@
     "    \"\"\"\n",
     "    Merge the final dataframe with the event data.\"\"\"\n",
     "    final_output = pd.merge(eventdata, df_output, left_on='GEOID', right_on='CENSUSCODE', how='left')\n",
-    "    final_output.ffill(inplace=True)\n",
+    "    final_output = final_output.ffill(axis=0)\n",
     "    final_output.drop(columns=['CENSUSCODE'], axis=1, inplace=True)\n",
     "    return final_output\n"
    ]
@@ -240,6 +236,7 @@
     "    # 1. Read the event data\n",
     "    print(f\"1. Reading event data for event ID: {eventid}\")\n",
     "    eventdata = read_event_data(eventid)\n",
+    "\n",
     "    # 2. Read the building count data\n",
     "    print(\"2. Reading building count data...\")\n",
     "    building_count = read_building_count_by_tract()\n",
@@ -249,9 +246,11 @@
     "    # 4. Merge the building count and building stock data\n",
     "    print(\"4. Merging building count and building stock data...\")\n",
     "    df_output = count_building_proportion(building_count, building_stock)\n",
+    "\n",
     "    # 5. Merge the event data and the merged building count and building stock data\n",
     "    print(\"5. Merging event data with building data...\")\n",
     "    final_output = merge_final_df(eventdata, df_output)\n",
+    "  \n",
     "    # 6. Save the final output to the GeoPackage\n",
     "    print(\"6. Saving final output to GeoPackage...\")\n",
     "    layer_name = \"tract_shakemap_pga\"\n",
@@ -267,22 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "GeoPandas version: 1.0.1\n",
+      "Pandas version: 2.2.3\n",
       "1. Reading event data for event ID: nc72282711\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "2. Reading building count data...\n",
       "3. Reading building stock data...\n",
       "Building stock data exists at /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_stock_data/Building_Percentages_Per_Tract_ALLSTATES.csv\n",
       "4. Merging building count and building stock data...\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "5. Merging event data with building data...\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "6. Saving final output to GeoPackage...\n",
       "Saved tract_shakemap_pga to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/ShakeMaps/nc72282711/eqmodel_outputs.gpkg (overwritten).\n",
-      "Building clip analysis completed for event ID: nc72282711\n"
+      "Building clip analysis completed for event ID: nc72282711\n",
+      "Saving final output to CSV...\n"
      ]
     }
    ],
@@ -294,7 +299,9 @@
     "    # building_stock = get_building_stock_data()\n",
     "    # df_output = count_building_proportion(building_count, building_stock)\n",
     "    # save_to_geopackage(df_output, layer_name=\"building_data\")\n",
-    "    \n",
+    "    print(\"GeoPandas version:\", gpd.__version__)\n",
+    "    print(\"Pandas version:\", pd.__version__)\n",
+    "\n",
     "    # Perform building clip analysis for a specific event ID\n",
     "    eventid = 'nc72282711'\n",
     "    building_clip_analysis(eventid)"
