Delete the limit for script testing

--- a/WorkingScripts/o3_get_building_structure.ipynb
+++ b/WorkingScripts/o3_get_building_structure.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
     "    # Iterate through the state names and download the corresponding ZIP files\n",
     "    i = 0\n",
     "    for state in state_links:\n",
-    "        if i < 2:\n",
+    "        if i < len(state_links):\n",
     "            download_and_extract_zip(state, state_links)\n",
     "            i += 1\n",
     "        else:\n",
@@ -337,8 +337,8 @@
     "\n",
     "    # states data\n",
     "    states_data = [\n",
-    "        (\"Alabama\", \"AL\"), (\"Alaska\", \"AK\")]\n",
-    "    \"\"\"(\"Arizona\", \"AZ\"), (\"Arkansas\", \"AR\"), (\"California\", \"CA\"), (\"Colorado\", \"CO\"), (\"Connecticut\", \"CT\"), (\"Delaware\", \"DE\"),\n",
+    "        (\"Alabama\", \"AL\"), (\"Alaska\", \"AK\")\n",
+    "        (\"Arizona\", \"AZ\"), (\"Arkansas\", \"AR\"), (\"California\", \"CA\"), (\"Colorado\", \"CO\"), (\"Connecticut\", \"CT\"), (\"Delaware\", \"DE\"),\n",
     "        (\"Florida\", \"FL\"), (\"Georgia\", \"GA\"), (\"Hawaii\", \"HI\"), (\"Idaho\", \"ID\"),\n",
     "        (\"Illinois\", \"IL\"), (\"Indiana\", \"IN\"), (\"Iowa\", \"IA\"), (\"Kansas\", \"KS\"),\n",
     "        (\"Kentucky\", \"KY\"), (\"Louisiana\", \"LA\"), (\"Maine\", \"ME\"), (\"Maryland\", \"MD\"),\n",
@@ -349,7 +349,7 @@
     "        (\"Oregon\", \"OR\"), (\"Pennsylvania\", \"PA\"), (\"Rhode Island\", \"RI\"), (\"South Carolina\", \"SC\"),\n",
     "        (\"South Dakota\", \"SD\"), (\"Tennessee\", \"TN\"), (\"Texas\", \"TX\"), (\"Utah\", \"UT\"),\n",
     "        (\"Vermont\", \"VT\"), (\"Virginia\", \"VA\"), (\"Washington\", \"WA\"), (\"West Virginia\", \"WV\"),\n",
-    "        (\"Wisconsin\", \"WI\"), (\"Wyoming\", \"WY\")]\"\"\"\n",
+    "        (\"Wisconsin\", \"WI\"), (\"Wyoming\", \"WY\")]\n",
     "\n",
     "    # read the shapefiles for all states\n",
     "    for state_name, stateid in states_data:\n",
