fix some directory problems

--- a/WorkingScripts/o3_get_building_structure.ipynb
+++ b/WorkingScripts/o3_get_building_structure.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,25 @@
     "    building_data_csv = os.path.join(data_path, 'building_data_csv')\n",
     "    building_data_gdb = os.path.join(data_path, 'building_data_gdb')\n",
     "    building_stock_data = os.path.join(data_path, 'building_stock_data')\n",
+    "    census_shp = os.path.join(data_path, 'census_shp')\n",
+    "    extracted_census_shp = os.path.join(data_path, 'extracted_census_shp')\n",
+    "    merged_shapefile = os.path.join(data_path, 'merged_shapefile')\n",
     "    if not os.path.exists(building_data_csv):\n",
     "        os.makedirs(building_data_csv)\n",
     "    if not os.path.exists(building_data_gdb):\n",
     "        os.makedirs(building_data_gdb)\n",
     "    if not os.path.exists(building_stock_data):\n",
     "        os.makedirs(building_stock_data)\n",
+    "    if not os.path.exists(census_shp):\n",
+    "        os.makedirs(census_shp)\n",
+    "    if not os.path.exists(extracted_census_shp):\n",
+    "        os.makedirs(extracted_census_shp)\n",
+    "    if not os.path.exists(merged_shapefile):\n",
+    "        os.makedirs(merged_shapefile)\n",
+    "    \n",
+    "    ShakeMaps = os.path.join(parent, 'ShakeMaps')\n",
+    "    if not os.path.exists(ShakeMaps):\n",
+    "        os.makedirs(ShakeMaps)\n",
     "\n",
     "    return building_data_csv, building_data_gdb, building_stock_data"
    ]
