Adjust for colab

--- a/WorkingScripts/environment_setting.ipynb
+++ b/WorkingScripts/environment_setting.ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# check if directory exist if not make it, return path\n",
-    "def make_directories():\n",
+    "def make_directories(parent_dir):\n",
     "    \"\"\"Create directories for data storage if they do not exist.\"\"\"\n",
     "    data_path = os.path.join(parent_dir, 'Data')\n",
     "    if not os.path.exists(data_path):\n",
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def install_req():\n",
+    "def install_req(parent_dir):\n",
     "    \"\"\"Install required packages for the script.\"\"\"\n",
     "    # read requirements.txt\n",
     "    # and install the packages\n",
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def setting_env():\n",
+    "def setting_env(parent_dir):\n",
     "    \"\"\"Set up the environment for the script.\"\"\"\n",
-    "    make_directories()\n",
-    "    install_req()\n",
+    "    make_directories(parent_dir)\n",
+    "    install_req(parent_dir)\n",
     "    print(\"Environment is set up successfully.\")"
    ]
   },
@@ -151,7 +151,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    setting_env()"
+    "    setting_env(parent_dir)"
    ]
   }
  ],
