edit o3 for colab

--- a/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
+++ b/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_event_data(eventid = 'nc72282711'):\n",
+    "def read_event_data(parent_dir, eventid = 'nc72282711'):\n",
     "    \"\"\"\n",
     "    Read event data from a GPKG file.\n",
     "    \"\"\"\n",
-    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    # parent_dir = os.path.dirname(os.getcwd())\n",
     "    event_dir = os.path.join(parent_dir, 'ShakeMaps', eventid)\n",
     "\n",
     "    # Update with the actual path\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,10 +166,10 @@
     "       'C1H', 'C2L', 'C2M', 'C2H', 'C3L', 'C3M', 'C3H', 'PC1', 'PC2L', 'PC2M',\n",
     "       'PC2H', 'RM1L', 'RM1M', 'RM2L', 'RM2M', 'RM2H', 'URML', 'URMM', 'MH']\n",
     "    for col in cols:\n",
-    "        merged_df[f\"{col}_COUNT\"] = round(merged_df[col]/merged_df['Total'] * merged_df['TOTAL_BUILDING_COUNT'])\n",
+    "        merged_df[f\"{col}\"] = round(merged_df[col]/merged_df['Total'] * merged_df['TOTAL_BUILDING_COUNT'])\n",
     "    \n",
     "    # drop the proportion columns\n",
-    "    merged_df.drop(columns=cols, axis=1, inplace=True)\n",
+    "    #merged_df.drop(columns=cols, axis=1, inplace=True)\n",
     "    merged_df.drop(columns=['Total'], axis=1, inplace=True)\n",
     "    \n",
     "    return merged_df"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def building_clip_analysis(eventid):\n",
+    "def building_clip_analysis(parent_dir, eventid):\n",
     "    # overall work flow\n",
     "    # 1. Read the event data\n",
     "    print(f\"1. Reading event data for event ID: {eventid}\")\n",
-    "    eventdata = read_event_data(eventid)\n",
+    "    eventdata = read_event_data(parent_dir, eventid)\n",
     "\n",
     "    # 2. Read the building count data\n",
     "    print(\"2. Reading building count data...\")\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -274,16 +274,13 @@
      "output_type": "stream",
      "text": [
       "GeoPandas version: 1.0.1\n",
-      "Pandas version: 2.2.3\n",
+      "Pandas version: 2.2.2\n",
       "1. Reading event data for event ID: nc72282711\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
       "2. Reading building count data...\n",
       "3. Reading building stock data...\n",
       "Building stock data exists at /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/Data/building_stock_data/Building_Percentages_Per_Tract_ALLSTATES.csv\n",
       "4. Merging building count and building stock data...\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
       "5. Merging event data with building data...\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
       "6. Saving final output to GeoPackage...\n",
       "Saved tract_shakemap_pga to /Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/ShakeMaps/nc72282711/eqmodel_outputs.gpkg (overwritten).\n",
       "Building clip analysis completed for event ID: nc72282711\n",
@@ -303,8 +300,9 @@
     "    print(\"Pandas version:\", pd.__version__)\n",
     "\n",
     "    # Perform building clip analysis for a specific event ID\n",
+    "    parent_dir = os.path.dirname(os.getcwd())\n",
     "    eventid = 'nc72282711'\n",
-    "    building_clip_analysis(eventid)"
+    "    building_clip_analysis(parent_dir, eventid)"
    ]
   }
  ],
