adjusted colab until o4

--- a/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
+++ b/WorkingScripts/o3_clip_eventdata_buildingstocks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +71,11 @@
     "    # if exists, read it\n",
     "    # if not, check if the gdb file exists\n",
     "    # if exists, read it\n",
-    "def read_building_count_by_tract():\n",
+    "def read_building_count_by_tract(parent_dir):\n",
     "    \"\"\"\n",
     "    Read building count data from a CSV file.\n",
     "    \"\"\"\n",
-    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    # parent_dir = os.path.dirname(os.getcwd())\n",
     "    # Update with the actual path\n",
     "    CSV_PATH = os.path.join(parent_dir, 'Data', 'building_data_csv', \"aggregated_building_data.csv\")\n",
     "    # check if the file exists\n",
@@ -97,18 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_building_stock_data():\n",
+    "def get_building_stock_data(parent_dir):\n",
     "    \"\"\"\n",
     "    2. Check if the csv file exists\n",
     "    3. If not, create the folder aand copy the csv file\n",
     "    4. If exists, read the csv file\n",
     "    \"\"\"\n",
     "\n",
-    "    parent_dir = os.path.dirname(os.getcwd())\n",
+    "    \n",
     "    # check if the folder exists\n",
     "    CSV_PATH = os.path.join(parent_dir, 'Data', 'building_stock_data', 'Building_Percentages_Per_Tract_ALLSTATES.csv')\n",
     "    \n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,10 +239,10 @@
     "\n",
     "    # 2. Read the building count data\n",
     "    print(\"2. Reading building count data...\")\n",
-    "    building_count = read_building_count_by_tract()\n",
+    "    building_count = read_building_count_by_tract(parent_dir)\n",
     "    # 3. Read the building stock data\n",
     "    print(\"3. Reading building stock data...\")\n",
-    "    building_stock = get_building_stock_data()\n",
+    "    building_stock = get_building_stock_data(parent_dir)\n",
     "    # 4. Merge the building count and building stock data\n",
     "    print(\"4. Merging building count and building stock data...\")\n",
     "    df_output = count_building_proportion(building_count, building_stock)\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
