--- a/WorkingScripts/colab.ipynb
+++ b/WorkingScripts/colab.ipynb
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -222,7 +222,7 @@
               "'/Users/yusufpradana/Library/CloudStorage/OneDrive-Personal/Gradschool/4_SPRING25/Capstone/github/EarthquakeDamageModel_Heinz/ShakeMaps/nc73821036'"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -482,7 +482,7 @@
               "4                  9.537085e-17                 1.561482e-25  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -505,7 +505,68 @@
             "1  06001400200  Census Tract 4002, Alameda County, California    2001\n",
             "2  06001400300  Census Tract 4003, Alameda County, California    5504\n",
             "3  06001400400  Census Tract 4004, Alameda County, California    4112\n",
-            "4  06001400500  Census Tract 4005, Alameda County, California    3644\n"
+            "4  06001400500  Census Tract 4005, Alameda County, California    3644\n",
+            "        GEOID  max_intensity  min_intensity  mean_intensity  \\\n",
+            "0  6001400100           0.01           0.01            0.01   \n",
+            "1  6001400200           0.01           0.01            0.01   \n",
+            "2  6001400300           0.01           0.01            0.01   \n",
+            "3  6001400400           0.01           0.01            0.01   \n",
+            "4  6001400500           0.01           0.01            0.01   \n",
+            "\n",
+            "                                            geometry  Total_Num_Building  \\\n",
+            "0  MULTIPOLYGON (((-122.24692041680534 37.8854393...              1298.0   \n",
+            "1  MULTIPOLYGON (((-122.25792355695359 37.8426073...               696.0   \n",
+            "2  MULTIPOLYGON (((-122.26563158321628 37.8376373...              1629.0   \n",
+            "3  MULTIPOLYGON (((-122.2618265652303 37.84162437...              1228.0   \n",
+            "4  MULTIPOLYGON (((-122.26950755249248 37.8485833...              1018.0   \n",
+            "\n",
+            "   Total_Num_Building_Slight  Total_Num_Building_Moderate  \\\n",
+            "0                   0.000384                 1.397666e-10   \n",
+            "1                   0.000311                 3.601871e-10   \n",
+            "2                   0.000826                 9.106309e-10   \n",
+            "3                   0.000577                 7.440906e-10   \n",
+            "4                   0.000559                 7.481115e-10   \n",
+            "\n",
+            "   Total_Num_Building_Extensive  Total_Num_Building_Complete  \n",
+            "0                  4.064599e-18                 4.480291e-27  \n",
+            "1                  4.727889e-17                 7.762607e-26  \n",
+            "2                  1.002471e-16                 1.615245e-25  \n",
+            "3                  9.536990e-17                 1.561482e-25  \n",
+            "4                  9.537085e-17                 1.561482e-25  \n",
+            "df2:           GEOID  max_intensity  Total_Num_Building  Total_Num_Building_Slight  \\\n",
+            "0  06023011100           0.64              2398.0                 338.441448   \n",
+            "1  06023010902           0.60              3367.0                  34.294926   \n",
+            "2  06023011000           0.54              2042.0                 831.352281   \n",
+            "3  06023010901           0.54              1595.0                 708.161989   \n",
+            "4  06023010800           0.54              2529.0                 822.325654   \n",
+            "\n",
+            "   Total_Num_Building_Moderate  Total_Num_Building_Extensive  \\\n",
+            "0                    32.818383                      2.218915   \n",
+            "1                     0.275334                      0.000189   \n",
+            "2                   674.346964                    183.374078   \n",
+            "3                   479.789037                    100.200062   \n",
+            "4                   122.028606                     20.651857   \n",
+            "\n",
+            "   Total_Num_Building_Complete risk_level       num_FU  perc_FU_NH_low  \\\n",
+            "0                 1.398090e-02        low   367.481602            0.05   \n",
+            "1                 2.222358e-09        low    34.534509            0.05   \n",
+            "2                 8.425120e+01        low  1458.376437            0.05   \n",
+            "3                 3.577549e+01        low  1147.622466            0.05   \n",
+            "4                 1.016026e+00        low   933.033950            0.05   \n",
+            "\n",
+            "   perc_FU_NH_high      num_PU  perc_PU_NH_low  perc_PU_NH_high      num_NU  \\\n",
+            "0                0    4.821398            0.05              0.1    1.189726   \n",
+            "1                0    0.035841            0.05              0.1    0.000100   \n",
+            "2                0  135.193649            0.05              0.1  179.754434   \n",
+            "3                0   88.138100            0.05              0.1   88.166012   \n",
+            "4                0   21.047004            0.05              0.1   11.941190   \n",
+            "\n",
+            "   BHI_factor_low  BHI_factor_high  \n",
+            "0        0.008259         0.000697  \n",
+            "1        0.000513         0.000001  \n",
+            "2        0.127048         0.094649  \n",
+            "3        0.094015         0.060802  \n",
+            "4        0.023585         0.005554  \n"
           ]
         },
         {
@@ -551,24 +612,166 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>06023011100</td>\n",
+              "      <td>0.64</td>\n",
+              "      <td>2398.0</td>\n",
+              "      <td>338.441448</td>\n",
+              "      <td>32.818383</td>\n",
+              "      <td>2.218915</td>\n",
+              "      <td>1.398090e-02</td>\n",
+              "      <td>low</td>\n",
+              "      <td>367.481602</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4.821398</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>1.189726</td>\n",
+              "      <td>0.008259</td>\n",
+              "      <td>0.000697</td>\n",
+              "      <td>4724</td>\n",
+              "      <td>2398.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>06023010902</td>\n",
+              "      <td>0.60</td>\n",
+              "      <td>3367.0</td>\n",
+              "      <td>34.294926</td>\n",
+              "      <td>0.275334</td>\n",
+              "      <td>0.000189</td>\n",
+              "      <td>2.222358e-09</td>\n",
+              "      <td>low</td>\n",
+              "      <td>34.534509</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.035841</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>0.000100</td>\n",
+              "      <td>0.000513</td>\n",
+              "      <td>0.000001</td>\n",
+              "      <td>4074</td>\n",
+              "      <td>3367.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>06023011000</td>\n",
+              "      <td>0.54</td>\n",
+              "      <td>2042.0</td>\n",
+              "      <td>831.352281</td>\n",
+              "      <td>674.346964</td>\n",
+              "      <td>183.374078</td>\n",
+              "      <td>8.425120e+01</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1458.376437</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>135.193649</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>179.754434</td>\n",
+              "      <td>0.127048</td>\n",
+              "      <td>0.094649</td>\n",
+              "      <td>4625</td>\n",
+              "      <td>2042.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>06023010901</td>\n",
+              "      <td>0.54</td>\n",
+              "      <td>1595.0</td>\n",
+              "      <td>708.161989</td>\n",
+              "      <td>479.789037</td>\n",
+              "      <td>100.200062</td>\n",
+              "      <td>3.577549e+01</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1147.622466</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>88.138100</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>88.166012</td>\n",
+              "      <td>0.094015</td>\n",
+              "      <td>0.060802</td>\n",
+              "      <td>4725</td>\n",
+              "      <td>1595.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>06023010800</td>\n",
+              "      <td>0.54</td>\n",
+              "      <td>2529.0</td>\n",
+              "      <td>822.325654</td>\n",
+              "      <td>122.028606</td>\n",
+              "      <td>20.651857</td>\n",
+              "      <td>1.016026e+00</td>\n",
+              "      <td>low</td>\n",
+              "      <td>933.033950</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0</td>\n",
+              "      <td>21.047004</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>0.1</td>\n",
+              "      <td>11.941190</td>\n",
+              "      <td>0.023585</td>\n",
+              "      <td>0.005554</td>\n",
+              "      <td>4910</td>\n",
+              "      <td>2529.0</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [GEOID, max_intensity, Total_Num_Building, Total_Num_Building_Slight, Total_Num_Building_Moderate, Total_Num_Building_Extensive, Total_Num_Building_Complete, risk_level, num_FU, perc_FU_NH_low, perc_FU_NH_high, num_PU, perc_PU_NH_low, perc_PU_NH_high, num_NU, BHI_factor_low, BHI_factor_high, population, denominator]\n",
-              "Index: []"
+              "         GEOID  max_intensity  Total_Num_Building  Total_Num_Building_Slight  \\\n",
+              "0  06023011100           0.64              2398.0                 338.441448   \n",
+              "1  06023010902           0.60              3367.0                  34.294926   \n",
+              "2  06023011000           0.54              2042.0                 831.352281   \n",
+              "3  06023010901           0.54              1595.0                 708.161989   \n",
+              "4  06023010800           0.54              2529.0                 822.325654   \n",
+              "\n",
+              "   Total_Num_Building_Moderate  Total_Num_Building_Extensive  \\\n",
+              "0                    32.818383                      2.218915   \n",
+              "1                     0.275334                      0.000189   \n",
+              "2                   674.346964                    183.374078   \n",
+              "3                   479.789037                    100.200062   \n",
+              "4                   122.028606                     20.651857   \n",
+              "\n",
+              "   Total_Num_Building_Complete risk_level       num_FU  perc_FU_NH_low  \\\n",
+              "0                 1.398090e-02        low   367.481602            0.05   \n",
+              "1                 2.222358e-09        low    34.534509            0.05   \n",
+              "2                 8.425120e+01        low  1458.376437            0.05   \n",
+              "3                 3.577549e+01        low  1147.622466            0.05   \n",
+              "4                 1.016026e+00        low   933.033950            0.05   \n",
+              "\n",
+              "   perc_FU_NH_high      num_PU  perc_PU_NH_low  perc_PU_NH_high      num_NU  \\\n",
+              "0                0    4.821398            0.05              0.1    1.189726   \n",
+              "1                0    0.035841            0.05              0.1    0.000100   \n",
+              "2                0  135.193649            0.05              0.1  179.754434   \n",
+              "3                0   88.138100            0.05              0.1   88.166012   \n",
+              "4                0   21.047004            0.05              0.1   11.941190   \n",
+              "\n",
+              "   BHI_factor_low  BHI_factor_high population  denominator  \n",
+              "0        0.008259         0.000697       4724       2398.0  \n",
+              "1        0.000513         0.000001       4074       3367.0  \n",
+              "2        0.127048         0.094649       4625       2042.0  \n",
+              "3        0.094015         0.060802       4725       1595.0  \n",
+              "4        0.023585         0.005554       4910       2529.0  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "import o5_bhi\n",
-        "\n",
+        "import os\n",
+        "parent_dir = os.path.dirname(os.getcwd())\n",
         "df = o5_bhi.process_bhi(parent_dir, o4_output)\n",
         "df.head()"
       ]
